Fix broken styles after Toggle update

--- a/override.css
+++ b/override.css
@@ -8,15 +8,15 @@
   display: none !important;
 }
 
-.css-1tctk84-TimerFormWrapper-raised20-block {
+[data-heap-id="timer-page-list"] > *:first-child {
   top: 36px !important;
 }
 
-.css-19k6azv-ExpandedArea {
+[data-heap-id="timer-page-list"] > *:first-child > *:nth-child(2) {
   display: none !important;
 }
 
-.css-w1geeq-Root-sunken10 {
+.css-19k6azv-ExpandedArea {
   display: none !important;
 }
 
